--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<!-- Header -->
 			<header id="header">
 				<h1 align="middle">The Green House</h1>
-				<p align="middle"><i>A magic place called Home.</i></p>
+				<p align="middle"><i>Humanity: a beautiful kind of capital that grows through Sharing.</i></p>
 			</header>
 
 		<!-- Signup Form -->
