--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<footer id="footer" align="middle">
 				<ul class="icons">
 					<li><a href="https://instagram.com/" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="https://facebook.com/" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="https://facebook.com/laserradelleidee" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 					<li><a href="https://www.linkedin.com/" target="_blank" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 					<li><a href="https://github.com/gcamerli/greenhouse" target="_blank" class="icon fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href="mailto:info@thegreenhouse.online" target="_blank" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
