--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					<li><a href="mailto:info@thegreenhouse.online" target="_blank" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; 2016</li><li>Credits: <a href="/statuto_greenhouse.pdf" target="_blank">The Green House</a></li>
+					<li>&copy; 2016</li><li>Credits: <a href="statuto_greenhouse.pdf" target="_blank">The Green House</a></li>
 				</ul>
 
 		<!-- Privay policy -->
