--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 		<!-- Music -->
 			<audio autoplay=true loop=false preload=auto>
-				<source src="music/down_to_earth.ogg" type="audio/ogg">
+				<source src="music/down_to_earth_refrain.ogg" type="audio/ogg">
 			</audio>
 
 		<!-- Cookie policy -->
