--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 		<!-- Footer -->
 			<footer id="footer" align="middle">
 				<ul class="icons">
+					<li><a href="https://www.youtube.com/channel/UC41k15cn3liOXH6ngD7gZNQ" target="_blank" class="icon fa-youtube-play"><span class="label">Youtube</span></a></li>
 					<li><a href="https://instagram.com/" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 					<li><a href="https://facebook.com/laserradelleidee" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 					<li><a href="https://www.linkedin.com/" target="_blank" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
