--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 		<!-- Music -->
 			<audio autoplay=true loop=false preload=auto>
-				<source src="music/down_to_earth_refrain.ogg" type="audio/ogg">
+				<source src="http://cdn.thegreenhouse.online/music/down_to_earth.mp3" type="audio/ogg">
 			</audio>
 
 		<!-- Cookie policy -->
