--- a/index.html
+++ b/index.html
@@ -4,26 +4,26 @@
 		<title>TheGreenHouse</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="apple-touch-icon-precomposed" sizes="57x57" href="images/icons/apple-touch-icon-57x57.png" />
-		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/icons/apple-touch-icon-114x114.png" />
-		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/icons/apple-touch-icon-72x72.png" />
-		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/icons/apple-touch-icon-144x144.png" />
-		<link rel="apple-touch-icon-precomposed" sizes="60x60" href="images/icons/apple-touch-icon-60x60.png" />
-		<link rel="apple-touch-icon-precomposed" sizes="120x120" href="images/icons/apple-touch-icon-120x120.png" />
-		<link rel="apple-touch-icon-precomposed" sizes="76x76" href="images/icons/apple-touch-icon-76x76.png" />
-		<link rel="apple-touch-icon-precomposed" sizes="152x152" href="images/icons/apple-touch-icon-152x152.png" />
-		<link rel="icon" type="image/png" href="images/icons/favicon-196x196.png" sizes="196x196" />
-		<link rel="icon" type="image/png" href="images/icons/favicon-96x96.png" sizes="96x96" />
-		<link rel="icon" type="image/png" href="images/icons/favicon-32x32.png" sizes="32x32" />
-		<link rel="icon" type="image/png" href="images/icons/favicon-16x16.png" sizes="16x16" />
-		<link rel="icon" type="image/png" href="images/icons/favicon-128.png" sizes="128x128" />
+		<link rel="apple-touch-icon-precomposed" sizes="57x57" href="http://cdn.thegreenhouse.online/image/tgh_icon/apple-touch-icon-57x57.png" />
+		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="http://cdn.thegreenhouse.online/image/tgh_icon/apple-touch-icon-114x114.png" />
+		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://cdn.thegreenhouse.online/image/tgh_icon/apple-touch-icon-72x72.png" />
+		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://cdn.thegreenhouse.online/image/tgh_icon/apple-touch-icon-144x144.png" />
+		<link rel="apple-touch-icon-precomposed" sizes="60x60" href="http://cdn.thegreenhouse.online/image/tgh_icon/apple-touch-icon-60x60.png" />
+		<link rel="apple-touch-icon-precomposed" sizes="120x120" href="http://cdn.thegreenhouse.online/image/tgh_icon/apple-touch-icon-120x120.png" />
+		<link rel="apple-touch-icon-precomposed" sizes="76x76" href="http://cdn.thegreenhouse.online/image/tgh_icon/apple-touch-icon-76x76.png" />
+		<link rel="apple-touch-icon-precomposed" sizes="152x152" href="http://cdn.thegreenhouse.online/image/tgh_icon/apple-touch-icon-152x152.png" />
+		<link rel="icon" type="image/png" href="http://cdn.thegreenhouse.online/image/tgh_icon/favicon-196x196.png" sizes="196x196" />
+		<link rel="icon" type="image/png" href="http://cdn.thegreenhouse.online/image/tgh_icon/favicon-96x96.png" sizes="96x96" />
+		<link rel="icon" type="image/png" href="http://cdn.thegreenhouse.online/image/tgh_icon/favicon-32x32.png" sizes="32x32" />
+		<link rel="icon" type="image/png" href="http://cdn.thegreenhouse.online/image/tgh_icon/favicon-16x16.png" sizes="16x16" />
+		<link rel="icon" type="image/png" href="http://cdn.thegreenhouse.online/image/tgh_icon/favicon-128.png" sizes="128x128" />
 		<meta name="application-name" content="TheGreenHouse;"/>
 		<meta name="msapplication-TileColor" content="#FFFFFF" />
-		<meta name="msapplication-TileImage" content="images/icons/mstile-144x144.png" />
-		<meta name="msapplication-square70x70logo" content="images/icons/mstile-70x70.png" />
-		<meta name="msapplication-square150x150logo" content="images/icons/mstile-150x150.png" />
-		<meta name="msapplication-wide310x150logo" content="images/icons/mstile-310x150.png" />
-		<meta name="msapplication-square310x310logo" content="images/icons/mstile-310x310.png" />
+		<meta name="msapplication-TileImage" content="http://cdn.thegreenhouse.online/image/tgh_icon/mstile-144x144.png" />
+		<meta name="msapplication-square70x70logo" content="http://cdn.thegreenhouse.online/image/tgh_icon/mstile-70x70.png" />
+		<meta name="msapplication-square150x150logo" content="http://cdn.thegreenhouse.online/image/tgh_icon/mstile-150x150.png" />
+		<meta name="msapplication-wide310x150logo" content="http://cdn.thegreenhouse.online/image/tgh_icon/mstile-310x150.png" />
+		<meta name="msapplication-square310x310logo" content="http://cdn.thegreenhouse.online/image/tgh_icon/mstile-310x310.png" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body>
