--- a/index.html
+++ b/index.html
@@ -43,15 +43,16 @@
 		<!-- Footer -->
 			<footer id="footer" align="middle">
 				<ul class="icons">
-					<li><a href="https://www.youtube.com/channel/UC41k15cn3liOXH6ngD7gZNQ" target="_blank" class="icon fa-youtube-play"><span class="label">Youtube</span></a></li>
-					<li><a href="https://instagram.com/" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="https://youtube.com/channel/UC41k15cn3liOXH6ngD7gZNQ" target="_blank" class="icon fa-youtube-play"><span class="label">Youtube</span></a></li>
+					<li><a href="https://instagram.com/thegreenhouse2016" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 					<li><a href="https://facebook.com/laserradelleidee" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-					<li><a href="https://www.linkedin.com/" target="_blank" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+					<li><a href="https://linkedin.com/company/thegreenhouse" target="_blank" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 					<li><a href="https://github.com/gcamerli/greenhouse" target="_blank" class="icon fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href="mailto:info@thegreenhouse.online" target="_blank" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; 2016</li><li>Credits: <a href="#" target="_blank">TheGreenHouse</a></li>
+					<li>&copy; 2016 - 2017</li>
+					<li><a href="#" target="_blank">TheGreenHouse APS</a></li>
 				</ul>
 
 		<!-- Privay policy -->
