--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
 				</ul>
 
 		<!-- Privay policy -->
+				<a href="//www.iubenda.com/privacy-policy/7971230" class="iubenda-black iubenda-embed" title="Privacy Policy">Privacy Policy</a>
+				<script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src = "//cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
 			</footer>
 
 		<!-- Music -->
