--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 		<!-- Music -->
 			<audio autoplay=true loop=false preload=auto>
-				<source src="#" type="audio/ogg">
+				<source src="http://cdn.thegreenhouse.online/music/down_to_earth_refrain.ogg" type="audio/ogg">
 			</audio>
 
 		<!-- Cookie policy -->
