--- a/index.html
+++ b/index.html
@@ -24,9 +24,13 @@
 		<meta name="msapplication-square150x150logo" content="https://cdn.thegreenhouse.online/image/tgh_icon/mstile-150x150.png" />
 		<meta name="msapplication-wide310x150logo" content="https://cdn.thegreenhouse.online/image/tgh_icon/mstile-310x150.png" />
 		<meta name="msapplication-square310x310logo" content="https://cdn.thegreenhouse.online/image/tgh_icon/mstile-310x310.png" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.0/gh-fork-ribbon.min.css" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body>
+		<!-- Ribbon -->
+
 		<!-- Header -->
 			<header id="header">
 				<h1 align="middle">TheGreenHouse</h1>
@@ -34,14 +38,16 @@
 			</header>
 
 		<!-- Signup Form -->
-			<form id="signup-form" method="post" action="#">
+			<form id="signup-form">
 
 		<!-- Typeform -->
+			<a class="typeform-share button" href="https://singinflower.typeform.com/to/lYHwRO" data-mode="1" target="_blank">Join us</a>
+			<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';})()</script>
 
 			</form>
 
 		<!-- Footer -->
-			<footer id="footer" align="middle">
+			<footer id="footer">
 				<ul class="icons">
 					<li><a href="https://youtube.com/channel/UC41k15cn3liOXH6ngD7gZNQ" target="_blank" class="icon fa-youtube-play"><span class="label">Youtube</span></a></li>
 					<li><a href="https://instagram.com/thegreenhouse2016" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
@@ -52,7 +58,7 @@
 				</ul>
 				<ul class="copyright">
 					<li>&copy; 2016 - 2017</li>
-					<li><a href="#" target="_blank">TheGreenHouse APS</a></li>
+					<li><a href="" target="_blank">TheGreenHouse APS</a></li>
 				</ul>
 
 		<!-- Privay policy -->
@@ -62,7 +68,7 @@
 
 		<!-- Music -->
 			<audio autoplay=true loop=false preload=auto>
-				<source src="https://cdn.thegreenhouse.online/music/down_to_earth_refrain.ogg" type="audio/ogg">
+				<source src="https://cdn.thegreenhouse.online/music/" type="audio/ogg">
 			</audio>
 
 		<!-- Cookie policy -->
@@ -70,5 +76,10 @@
 
 		<!-- Scripts -->
 			<script type="text/javascript" id="main" src="assets/js/main.js"></script>
+			<script type="text/javascript" id="snowstorm" src="assets/js/snowstorm.js"></script>
+			<script>
+	      snowStorm.snowColor = '#99ccff';
+	      snowStorm.flakesMaxActive = 80;
+			</script>
 	</body>
 </html>
