--- a/index.html
+++ b/index.html
@@ -32,23 +32,23 @@
 		<!-- Ribbon -->
 
 		<!-- Header -->
-			<header id="header">
+			<header id="header" class="animated fadeInDown">
 				<h1 align="middle">TheGreenHouse</h1>
 				<p align="middle"><i>Humanity: a beautiful kind of capital that grows through Sharing.</i></p>
 			</header>
 
 		<!-- Signup Form -->
-			<form id="signup-form">
+			<form id="signup-form" class="animated fadeInUpBig">
 
 		<!-- Typeform -->
-			<a class="typeform-share button" href="https://singinflower.typeform.com/to/lYHwRO" data-mode="1" target="_blank">Join us</a>
+			<a class="typeform-share button" href="https://singinflower.typeform.com/to/lYHwRO" target="_blank">Join us</a>
 			<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';})()</script>
 
 			</form>
 
 		<!-- Footer -->
 			<footer id="footer">
-				<ul class="icons">
+				<ul class="icons animated fadeInLeftBig">
 					<li><a href="https://youtube.com/channel/UC41k15cn3liOXH6ngD7gZNQ" target="_blank" class="icon fa-youtube-play"><span class="label">Youtube</span></a></li>
 					<li><a href="https://instagram.com/thegreenhouse2016" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 					<li><a href="https://facebook.com/laserradelleidee" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
@@ -56,30 +56,36 @@
 					<li><a href="https://github.com/gcamerli/greenhouse" target="_blank" class="icon fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href="mailto:info@thegreenhouse.online" target="_blank" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 				</ul>
-				<ul class="copyright">
+				<ul class="copyright animated fadeInLeftBig">
 					<li>&copy; 2016 - 2017</li>
-					<li><a href="" target="_blank">TheGreenHouse APS</a></li>
+					<li>TheGreenHouse APS</li>
+					<li><a href="https://thegreenhouse.online/about">About</a></li>
 				</ul>
 
-		<!-- Privay policy -->
-				<a href="//www.iubenda.com/privacy-policy/7971230" class="iubenda-black iubenda-embed" title="Privacy Policy">Privacy Policy</a>
-				<script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src = "//cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
+			<!-- Privay policy -->
+				<ul class="copyright animated fadeInLeftBig">
+					<li>
+						<a href="//www.iubenda.com/privacy-policy/7971230" class="iubenda-black iubenda-embed" title="Privacy Policy">Privacy Policy</a>
+						<script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src = "//cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
+					</li>
+				</ul>
 			</footer>
 
 		<!-- Music -->
 			<audio autoplay=true loop=false preload=auto>
-				<source src="https://cdn.thegreenhouse.online/music/" type="audio/ogg">
+				<source src="" type="audio/ogg">
 			</audio>
 
 		<!-- Cookie policy -->
-			<script type="text/javascript" id="cookiebar-latest" src="http://cdn.jsdelivr.net/cookie-bar/latest/cookiebar-latest.js"></script>
+			<script type="text/javascript" id="cookiebar-latest" src="https://cdn.jsdelivr.net/cookie-bar/latest/cookiebar-latest.js"></script>
 
 		<!-- Scripts -->
 			<script type="text/javascript" id="main" src="assets/js/main.js"></script>
 			<script type="text/javascript" id="snowstorm" src="assets/js/snowstorm.js"></script>
 			<script>
 	      snowStorm.snowColor = '#99ccff';
-	      snowStorm.flakesMaxActive = 80;
+	      snowStorm.flakesMaxActive = 96;
+				snowStorm.useTwinkleEffect = true;
 			</script>
 	</body>
 </html>
