--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<!-- Header -->
 			<header id="header" class="animated fadeInDown">
 				<h1 align="middle">TheGreenHouse</h1>
-				<p align="middle"><i>Humanity: a beautiful kind of capital that grows through Sharing.</i></p>
+				<h4><p align="middle"><i>Humanity: a beautiful kind of capital that grows through Sharing.</i></p></h4>
 			</header>
 
 		<!-- Signup Form -->
