--- a/about.html
+++ b/about.html
@@ -2,35 +2,32 @@
 <html>
 	<head>
 		<title>TheGreenHouse</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="apple-touch-icon-precomposed" sizes="57x57" href="https://cdn.thegreenhouse.online/image/tgh_icon/apple-touch-icon-57x57.png" />
-		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://cdn.thegreenhouse.online/image/tgh_icon/apple-touch-icon-114x114.png" />
-		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://cdn.thegreenhouse.online/image/tgh_icon/apple-touch-icon-72x72.png" />
-		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://cdn.thegreenhouse.online/image/tgh_icon/apple-touch-icon-144x144.png" />
-		<link rel="apple-touch-icon-precomposed" sizes="60x60" href="https://cdn.thegreenhouse.online/image/tgh_icon/apple-touch-icon-60x60.png" />
-		<link rel="apple-touch-icon-precomposed" sizes="120x120" href="https://cdn.thegreenhouse.online/image/tgh_icon/apple-touch-icon-120x120.png" />
-		<link rel="apple-touch-icon-precomposed" sizes="76x76" href="https://cdn.thegreenhouse.online/image/tgh_icon/apple-touch-icon-76x76.png" />
-		<link rel="apple-touch-icon-precomposed" sizes="152x152" href="https://cdn.thegreenhouse.online/image/tgh_icon/apple-touch-icon-152x152.png" />
-		<link rel="icon" type="image/png" href="https://cdn.thegreenhouse.online/image/tgh_icon/favicon-196x196.png" sizes="196x196" />
-		<link rel="icon" type="image/png" href="https://cdn.thegreenhouse.online/image/tgh_icon/favicon-96x96.png" sizes="96x96" />
-		<link rel="icon" type="image/png" href="https://cdn.thegreenhouse.online/image/tgh_icon/favicon-32x32.png" sizes="32x32" />
-		<link rel="icon" type="image/png" href="https://cdn.thegreenhouse.online/image/tgh_icon/favicon-16x16.png" sizes="16x16" />
-		<link rel="icon" type="image/png" href="https://cdn.thegreenhouse.online/image/tgh_icon/favicon-128.png" sizes="128x128" />
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+		<link rel="apple-touch-icon-precomposed" sizes="57x57" href="https://cdn.thegreenhouse.online/image/tgh_icon/apple-touch-icon-57x57.png">
+		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://cdn.thegreenhouse.online/image/tgh_icon/apple-touch-icon-114x114.png">
+		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://cdn.thegreenhouse.online/image/tgh_icon/apple-touch-icon-72x72.png">
+		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://cdn.thegreenhouse.online/image/tgh_icon/apple-touch-icon-144x144.png">
+		<link rel="apple-touch-icon-precomposed" sizes="60x60" href="https://cdn.thegreenhouse.online/image/tgh_icon/apple-touch-icon-60x60.png">
+		<link rel="apple-touch-icon-precomposed" sizes="120x120" href="https://cdn.thegreenhouse.online/image/tgh_icon/apple-touch-icon-120x120.png">
+		<link rel="apple-touch-icon-precomposed" sizes="76x76" href="https://cdn.thegreenhouse.online/image/tgh_icon/apple-touch-icon-76x76.png">
+		<link rel="apple-touch-icon-precomposed" sizes="152x152" href="https://cdn.thegreenhouse.online/image/tgh_icon/apple-touch-icon-152x152.png">
+		<link rel="icon" type="image/png" href="https://cdn.thegreenhouse.online/image/tgh_icon/favicon-196x196.png" sizes="196x196">
+		<link rel="icon" type="image/png" href="https://cdn.thegreenhouse.online/image/tgh_icon/favicon-96x96.png" sizes="96x96">
+		<link rel="icon" type="image/png" href="https://cdn.thegreenhouse.online/image/tgh_icon/favicon-32x32.png" sizes="32x32">
+		<link rel="icon" type="image/png" href="https://cdn.thegreenhouse.online/image/tgh_icon/favicon-16x16.png" sizes="16x16">
+		<link rel="icon" type="image/png" href="https://cdn.thegreenhouse.online/image/tgh_icon/favicon-128.png" sizes="128x128">
 		<meta name="application-name" content="TheGreenHouse;"/>
-		<meta name="msapplication-TileColor" content="#FFFFFF" />
-		<meta name="msapplication-TileImage" content="https://cdn.thegreenhouse.online/image/tgh_icon/mstile-144x144.png" />
-		<meta name="msapplication-square70x70logo" content="https://cdn.thegreenhouse.online/image/tgh_icon/mstile-70x70.png" />
-		<meta name="msapplication-square150x150logo" content="https://cdn.thegreenhouse.online/image/tgh_icon/mstile-150x150.png" />
-		<meta name="msapplication-wide310x150logo" content="https://cdn.thegreenhouse.online/image/tgh_icon/mstile-310x150.png" />
-		<meta name="msapplication-square310x310logo" content="https://cdn.thegreenhouse.online/image/tgh_icon/mstile-310x310.png" />
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.0/gh-fork-ribbon.min.css" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<meta name="msapplication-TileColor" content="#FFFFFF">
+		<meta name="msapplication-TileImage" content="https://cdn.thegreenhouse.online/image/tgh_icon/mstile-144x144.png">
+		<meta name="msapplication-square70x70logo" content="https://cdn.thegreenhouse.online/image/tgh_icon/mstile-70x70.png">
+		<meta name="msapplication-square150x150logo" content="https://cdn.thegreenhouse.online/image/tgh_icon/mstile-150x150.png">
+		<meta name="msapplication-wide310x150logo" content="https://cdn.thegreenhouse.online/image/tgh_icon/mstile-310x150.png">
+		<meta name="msapplication-square310x310logo" content="https://cdn.thegreenhouse.online/image/tgh_icon/mstile-310x310.png">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+		<link rel="stylesheet" href="assets/css/main.css">
 	</head>
 	<body>
-		<!-- Ribbon -->
-
 		<!-- Logo -->
 			<logo class="animated fadeInUpBig">
 				<img src="" alt="">
@@ -54,11 +51,5 @@
 
 		<!-- Scripts -->
 			<script type="text/javascript" id="main" src="assets/js/main.js"></script>
-			<script type="text/javascript" id="snowstorm" src="assets/js/snowstorm.js"></script>
-			<script>
-	      snowStorm.snowColor = '#99ccff';
-	      snowStorm.flakesMaxActive = 96;
-				snowStorm.useTwinkleEffect = true;
-			</script>
 	</body>
 </html>
