--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 			</footer>
 
 		<!-- Music -->
-			<audio autoplay=true loop=false preload=auto>
-				<source src="" type="audio/ogg">
+			<audio autoplay>
+				<source src="https://cdn.thegreenhouse.online/music/down_to_earth_refrain.ogg" type="audio/ogg">
 			</audio>
 
 		<!-- Cookie policy -->
