--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	</head>
 	<body>
 		<!-- Ribbon -->
-			<a class="github-fork-ribbon" href="https://thegreenhouse.online" title="Merry Xmas">Merry Xmas</a>
+			<a class="github-fork-ribbon" href="https://thegreenhouse.online" title="Happy New Year">Happy New Year</a>
 		<!-- Header -->
 			<header id="header" class="animated fadeInDown">
 				<h1 align="middle">TheGreenHouse</h1>
