--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
 		<link rel="stylesheet" href="assets/css/main.css">
 	</head>
 	<body>
-		<!-- Ribbon -->
+		<!-- Ribbon
 			<a class="github-fork-ribbon" href="https://thegreenhouse.online" title="Happy New Year">Happy New Year</a>
+			-->
 		<!-- Header -->
 			<header id="header" class="animated fadeInDown">
 				<h1 align="middle">TheGreenHouse</h1>
@@ -82,11 +83,12 @@
 
 		<!-- Scripts -->
 			<script type="text/javascript" id="main" src="assets/js/main.js"></script>
-			<script type="text/javascript" id="snowstorm" src="assets/js/snowstorm.js"></script>
+			<!--script type="text/javascript" id="snowstorm" src="assets/js/snowstorm.js"></script>
 			<script>
 	      snowStorm.snowColor = '#99ccff';
 	      snowStorm.flakesMaxActive = 96;
 				snowStorm.useTwinkleEffect = true;
 			</script>
+			-->
 	</body>
 </html>
