--- a/index.html
+++ b/index.html
@@ -31,15 +31,18 @@
 	<body>
 		<!-- Ribbon
 			<a class="github-fork-ribbon" href="https://thegreenhouse.online" title="Happy New Year">Happy New Year</a>
-			-->
+		-->
+
+		<!-- Logo -->
+
 		<!-- Header -->
-			<header id="header" class="animated fadeInDown">
+			<header id="header">
 				<h1 align="middle">TheGreenHouse</h1>
 				<h4><p align="middle"><i>Humanity: a beautiful kind of capital that grows through Sharing.</i></p></h4>
 			</header>
 
 		<!-- Signup Form -->
-			<form id="signup-form" class="animated fadeInUpBig">
+			<form id="signup-form">
 
 			<!-- Typeform -->
 				<a class="typeform-share button" href="https://singinflower.typeform.com/to/lYHwRO" target="_blank">Join us</a>
@@ -49,7 +52,7 @@
 
 		<!-- Footer -->
 			<footer id="footer">
-				<ul class="icons animated fadeInLeftBig">
+				<ul class="icons">
 					<li><a href="https://youtube.com/channel/UC41k15cn3liOXH6ngD7gZNQ" target="_blank" class="icon fa-youtube-play"><span class="label">Youtube</span></a></li>
 					<li><a href="https://instagram.com/thegreenhouse2016" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 					<li><a href="https://facebook.com/laserradelleidee" target="_blank" class="icon fa-facebook-square"><span class="label">Facebook</span></a></li>
@@ -58,14 +61,14 @@
 					<li><a href="http://thegreenhouse_aps.eventbrite.com" target="_blank" class="icon fa-calendar-o"><span class="label">Eventbrite</span></a></li>
 					<li><a href="mailto:info@thegreenhouse.online" target="_blank" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 				</ul>
-				<ul class="copyright animated fadeInLeftBig">
+				<ul class="copyright">
 					<li>&copy; 2016 - 2017</li>
 					<li>TheGreenHouse APS</li>
 					<li><a href="https://thegreenhouse.online/about">About</a></li>
 				</ul>
 
 			<!-- Privay policy -->
-				<ul class="copyright animated fadeInLeftBig">
+				<ul class="copyright">
 					<li>
 						<a href="//www.iubenda.com/privacy-policy/7971230" class="iubenda-black iubenda-embed" title="Privacy Policy">Privacy Policy</a>
 						<script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src = "//cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
