--- a/about.html
+++ b/about.html
@@ -29,13 +29,12 @@
 	</head>
 	<body>
 		<!-- Logo -->
-			<logo class="animated fadeInUpBig">
-				<img src="" alt="">
+			<logo>
+				<img class="center" src="images/logo.png" alt="Logo" width="80">
 			</logo>
 
 		<!-- Header -->
-			<img class="center" src="images/logo.png" width="80">
-			<header id="header" class="animated fadeInDownBig">
+			<header id="header">
 				<h4><p><strong><a href="https://thegreenhouse.online">THEGREENHOUSE</a></strong>, is a non-profit association, located in <strong><a href="https://en.wikipedia.org/wiki/Orria" target="_blank">Orria (Salerno, Italy)</a></strong>. Its goal is to promote events and formation activities in the <strong>cultural and artistic field</strong>, to allow the personal improvement of the attenders and the social and cultural development of the <strong><a href="https://en.wikipedia.org/wiki/Cilento" target="_blank">Cilento</a></strong> country.</p>
 				<p>An <strong><a href="https://singinflower.com" target="_blank">associative school</a></strong>, a cooperative Society of ideas and know-hows, an international study center created in <strong><a href="https://en.wikipedia.org/wiki/Cilento" target="_blank">Cilento</a></strong>.
 				</p></h4>
@@ -43,7 +42,7 @@
 
 		<!-- Footer -->
 			<footer id="footer">
-				<ul class="copyright animated fadeInLeftBig">
+				<ul class="copyright">
 					<li>&copy; 2016 - 2017</li>
 					<li>TheGreenHouse APS</li>
 					<li><a href="https://thegreenhouse.online">Home</a></li>
