Update main css

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 		-->
 
 		<!-- Logo -->
+			<logo>
+				<img class="center main" src="images/main_logo.png" alt="Logo" width="100">
+			</logo>
 
 		<!-- Header -->
 			<header id="header">
