--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 		<!-- Logo -->
 			<logo>
-				<img class="center main" src="images/main_logo.png" alt="Logo" width="120">
+				<img class="center main" src="images/white_logo.png" alt="Logo" width="130">
 			</logo>
 
 		<!-- Header -->
