--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 				<ul class="icons">
 					<li><a href="https://youtube.com/channel/UC41k15cn3liOXH6ngD7gZNQ" target="_blank" class="icon fa-youtube-play"><span class="label">Youtube</span></a></li>
 					<li><a href="https://instagram.com/thegreenhouse2016" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="https://twitter.com/AssociationTGH" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="https://facebook.com/laserradelleidee" target="_blank" class="icon fa-facebook-square"><span class="label">Facebook</span></a></li>
 					<li><a href="https://linkedin.com/company/thegreenhouse" target="_blank" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 					<li><a href="https://github.com/gcamerli/greenhouse" target="_blank" class="icon fa-github"><span class="label">GitHub</span></a></li>
