--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 					<li><a href="https://facebook.com/laserradelleidee" target="_blank" class="icon fa-facebook-square"><span class="label">Facebook</span></a></li>
 					<li><a href="https://linkedin.com/company/thegreenhouse" target="_blank" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 					<li><a href="https://github.com/gcamerli/greenhouse" target="_blank" class="icon fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="http://thegreenhouse_aps.eventbrite.com" target="_blank" class="icon fa-calendar-o"><span class="label">Eventbrite</span></a></li>
+					<li><a href="https://thegreenhouse_aps.eventbrite.com" target="_blank" class="icon fa-calendar-o"><span class="label">Eventbrite</span></a></li>
 					<li><a href="mailto:info@thegreenhouse.online" target="_blank" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
