--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 			</audio>
 
 		<!-- Cookie policy -->
-			<script type="text/javascript" id="cookiebar-latest" src="assets/js/cookiebar/cookiebar-latest.js"></script>
+			<script type="text/javascript" src="//cdn.jsdelivr.net/cookie-bar/1/cookiebar-latest.min.js"></script>
 
 		<!-- Scripts -->
 			<script type="text/javascript" id="main" src="assets/js/main.js"></script>
