--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 			</audio>
 
 		<!-- Cookie policy -->
-			<script type="text/javascript" src="//cdn.jsdelivr.net/cookie-bar/1/cookiebar-latest.min.js?theme=altblack&thirdparty=1&always=1&showNoConsent=1"></script>
+			<script type="text/javascript" src="//cdn.jsdelivr.net/cookie-bar/1/cookiebar-latest.min.js?theme=altblack&forceLang=en&thirdparty=1&always=1&showNoConsent=1"></script>
 
 		<!-- Scripts -->
 			<script type="text/javascript" id="main" src="assets/js/main.js"></script>
