Update 404 error page

--- a/404.html
+++ b/404.html
@@ -27,13 +27,13 @@
 		<meta name="msapplication-square150x150logo" content="https://cdn.thegreenhouse.online/image/tgh_icon/mstile-150x150.png">
 		<meta name="msapplication-wide310x150logo" content="https://cdn.thegreenhouse.online/image/tgh_icon/mstile-310x150.png">
 		<meta name="msapplication-square310x310logo" content="https://cdn.thegreenhouse.online/image/tgh_icon/mstile-310x310.png">
-    <link rel="stylesheet" href="assets/css/404_style.css">
+    <link rel="stylesheet" href="https://cdn.thegreenhouse.online/assets/css/404_style.css">
   </head>
   <body>
     <h1>Are you lost?</h1>
     <h2>Come back home ;)</h2>
     <br>
-    <img class="logo" src="images/logo.png" width="60" height="60">
+    <img class="logo" src="https://cdn.thegreenhouse.online/image/logo.png" width="60" height="60">
     <h3><a href="https://thegreenhouse.online" alt="TheGreenHouse">TheGreenHouse</a></h3>
   </body>
 </html>
