Update about page

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h4><p><strong><a href="https://thegreenhouse.online">THEGREENHOUSE</a></strong>, is a non-profit association, located in <strong><a href="https://en.wikipedia.org/wiki/Orria" target="_blank">Orria (Salerno, Italy)</a></strong>. Its goal is to promote events and formation activities in the <strong>cultural and artistic field</strong>, to allow the personal improvement of the attenders and the social and cultural development of the <strong><a href="https://en.wikipedia.org/wiki/Cilento" target="_blank">Cilento</a></strong> country.</p>
+				<h4><p><strong><a href="https://thegreenhouse.online">THEGREENHOUSE</a></strong> is a non-profit association, located in <strong><a href="https://en.wikipedia.org/wiki/Orria" target="_blank">Orria (Salerno, Italy)</a></strong>. Its goal is to promote events and formation activities in the <strong>cultural and artistic field</strong>, to allow the personal improvement of the attenders and the social and cultural development of the <strong><a href="https://en.wikipedia.org/wiki/Cilento" target="_blank">Cilento</a></strong> country.</p>
 				<p>An <strong><a href="https://singinflower.com" target="_blank">associative school</a></strong>, a cooperative Society of ideas and know-hows, an international study center created in <strong><a href="https://en.wikipedia.org/wiki/Cilento" target="_blank">Cilento</a></strong>.
 				</p></h4>
 			</header>
