--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 			</header>
 
 		<!-- Video -->
-			<video autoplay loop muted>
+			<!--video autoplay loop muted>
 				<source src="https://cdn.thegreenhouse.online/video/TGH_LandingPage.mp4" type="video/mp4">
-			</video>
+			</video-->
 
 		<!-- Signup Form -->
 			<form id="signup-form">
@@ -94,7 +94,7 @@
 			<script type="text/javascript" src="//cdn.jsdelivr.net/cookie-bar/1/cookiebar-latest.min.js?theme=altblack&forceLang=en&thirdparty=1&always=1&showNoConsent=1"></script>
 
 		<!-- Scripts -->
-			<!--script type="text/javascript" id="main" src="assets/js/main.js"></script>
+			<script type="text/javascript" id="main" src="assets/js/main.js"></script>
 			<!--script type="text/javascript" id="snowstorm" src="assets/js/snowstorm.js"></script>
 			<script>
 	      snowStorm.snowColor = '#99ccff';
