--- a/index.html
+++ b/index.html
@@ -24,30 +24,29 @@
 		<meta name="msapplication-square150x150logo" content="https://cdn.thegreenhouse.online/image/tgh_icon/mstile-150x150.png">
 		<meta name="msapplication-wide310x150logo" content="https://cdn.thegreenhouse.online/image/tgh_icon/mstile-310x150.png">
 		<meta name="msapplication-square310x310logo" content="https://cdn.thegreenhouse.online/image/tgh_icon/mstile-310x310.png">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <link rel="stylesheet" href="assets/css/ribbon.css">
+		<!--link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css"-->
+    <!--link rel="stylesheet" href="assets/css/ribbon.css"-->
 		<link rel="stylesheet" href="assets/css/main.css">
 	</head>
 	<body>
-		<!-- Ribbon
-			<a class="github-fork-ribbon" href="https://thegreenhouse.online" title="Happy New Year">Happy New Year</a>
-		-->
+		<!-- Ribbon -->
+			<!--a class="github-fork-ribbon" href="https://thegreenhouse.online" title="Happy New Year">Happy New Year</a-->
 
 		<!-- Logo -->
 			<logo>
 				<img class="center main" src="images/white_logo.png" alt="Logo" width="130">
 			</logo>
 
+			<!-- Video -->
+				<video autoplay loop muted>
+					<source src="https://cdn.thegreenhouse.online/video/TGH_LandingPage.mp4" type="video/mp4">
+				</video>
+
 		<!-- Header -->
 			<header id="header">
 				<h1 align="middle">TheGreenHouse</h1>
 				<h4><p align="middle"><i>Humanity: a beautiful kind of capital that grows through Sharing.</i></p></h4>
 			</header>
-
-		<!-- Video -->
-			<!--video autoplay loop muted>
-				<source src="https://cdn.thegreenhouse.online/video/TGH_LandingPage.mp4" type="video/mp4">
-			</video-->
 
 		<!-- Signup Form -->
 			<form id="signup-form">
@@ -94,13 +93,13 @@
 			<script type="text/javascript" src="//cdn.jsdelivr.net/cookie-bar/1/cookiebar-latest.min.js?theme=altblack&forceLang=en&thirdparty=1&always=1&showNoConsent=1"></script>
 
 		<!-- Scripts -->
-			<script type="text/javascript" id="main" src="assets/js/main.js"></script>
-			<!--script type="text/javascript" id="snowstorm" src="assets/js/snowstorm.js"></script>
-			<script>
+			<!--script type="text/javascript" id="main" src="assets/js/main.js"></script-->
+			<!--script type="text/javascript" id="snowstorm" src="assets/js/snowstorm.js"></script-->
+			<!--script>
 	      snowStorm.snowColor = '#99ccff';
 	      snowStorm.flakesMaxActive = 96;
 				snowStorm.useTwinkleEffect = true;
-			</script>
-			-->
+			</script-->
+
 	</body>
 </html>
