--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>TheGreenHouse</title>
+		<title>TheGreenHouse | Home</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 		<link rel="apple-touch-icon-precomposed" sizes="57x57" href="https://cdn.thegreenhouse.online/image/tgh_icon/apple-touch-icon-57x57.png">
