Update about page

--- a/about.html
+++ b/about.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>TGH | About</title>
+		<title>TheGreenHouse &middot; About</title>
 		<meta charset="utf-8">
+		<meta name="description" content="">
+		<meta name="keywords" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 		<link rel="apple-touch-icon-precomposed" sizes="57x57" href="https://cdn.thegreenhouse.online/image/tgh_icon/apple-touch-icon-57x57.png">
 		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://cdn.thegreenhouse.online/image/tgh_icon/apple-touch-icon-114x114.png">
