--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>TheGreenHouse &middot; Home</title>
 		<meta charset="utf-8">
-		<meta name="description" content="">
+		<meta name="description" content="THEGREENHOUSE is a non-profit association, located in Orria (Salerno), a beautiful country in the south of Italy inside Parco Nazionale del Cilento, an UNESCO heritage.">
 		<meta name="keywords" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 		<link rel="apple-touch-icon-precomposed" sizes="57x57" href="https://cdn.thegreenhouse.online/image/tgh_icon/apple-touch-icon-57x57.png">
