--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>TheGreenHouse &middot; Home</title>
+		<title>TheGreenHouse &middot; APS</title>
 		<meta charset="utf-8">
 		<meta name="description" content="THEGREENHOUSE is a non-profit association, located in Orria (Salerno), a beautiful country in the south of Italy inside Parco Nazionale del Cilento, an UNESCO heritage.">
 		<meta name="keywords" content="">
