--- a/about.html
+++ b/about.html
@@ -3,8 +3,8 @@
 	<head>
 		<title>TheGreenHouse &middot; About</title>
 		<meta charset="utf-8">
-		<meta name="description" content="">
-		<meta name="keywords" content="">
+		<meta name="description" content="THEGREENHOUSE is a non-profit association, located in Orria (Salerno), a beautiful country in the south of Italy inside Parco Nazionale del Cilento, an UNESCO heritage.">
+		<meta name="keywords" content="association cultural-heritage events sharing-economy italy">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 		<link rel="apple-touch-icon-precomposed" sizes="57x57" href="https://cdn.thegreenhouse.online/image/tgh_icon/apple-touch-icon-57x57.png">
 		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://cdn.thegreenhouse.online/image/tgh_icon/apple-touch-icon-114x114.png">
