--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
 				<ul class="copyright">
 					<li>&copy; 2016 - 2017</li>
 					<li>TheGreenHouse APS</li>
-					<li><a href="https://thegreenhouse.online/about">About</a></li>
+					<li><strong><a href="https://thegreenhouse.online/about">About</a></strong></li>
+					<li><strong><a href="https://blog.thegreenhouse.online" target="_blank">Blog</a></strong></li>
 				</ul>
 
 			<!-- Privay policy -->
