--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>TheGreenHouse &middot; Cooperative Society</title>
 		<meta charset="utf-8">
+		<meta name="google-site-verification" content="2DtKIh4XFw1dwD6yXCBEADmUVfeOhmxETvRQMLVpcVM">
 		<meta name="description" content="THEGREENHOUSE is a non-profit association, located in Orria (Salerno), a beautiful country in the south of Italy inside Parco Nazionale del Cilento, an UNESCO heritage.">
 		<meta name="keywords" content="association cultural-heritage events sharing-economy italy">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
