--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<title>TheGreenHouse &middot; Cooperative Society</title>
 		<meta charset="utf-8">
 		<meta name="google-site-verification" content="2DtKIh4XFw1dwD6yXCBEADmUVfeOhmxETvRQMLVpcVM">
-		<meta name="description" content="THEGREENHOUSE is a non-profit association, located in Orria (Salerno), a beautiful country in the south of Italy inside Parco Nazionale del Cilento, an UNESCO heritage.">
-		<meta name="keywords" content="association cultural-heritage events sharing-economy italy">
+		<meta name="description" content="TheGreenHouse is a non-profit association, located in Orria (Salerno), a beautiful country in the south of Italy inside Parco Nazionale del Cilento, an UNESCO heritage.">
+		<meta name="keywords" content="thegreenhouse association cultural-heritage events sharing-economy italy cooperative society non-profit cilento unesco formation culture art development free life creativity share knowledge experience dream international study center karin kempf bernard stiegler">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 		<link rel="apple-touch-icon-precomposed" sizes="57x57" href="https://cdn.thegreenhouse.online/image/tgh_icon/apple-touch-icon-57x57.png">
 		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://cdn.thegreenhouse.online/image/tgh_icon/apple-touch-icon-114x114.png">
