--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>TheGreenHouse &middot; About</title>
+		<title>TheGreenHouse APS &middot; About</title>
 		<meta charset="utf-8">
 		<meta name="description" content="TheGreenHouse is a non-profit association, located in Orria (Salerno), a beautiful country in the south of Italy inside Parco Nazionale del Cilento, an UNESCO heritage.">
 		<meta name="keywords" content="thegreenhouse association cultural-heritage events sharing-economy italy cooperative society non-profit cilento unesco formation culture art development free life creativity share knowledge experience dream international study center karin kempf bernard stiegler">
