--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>TheGreenHouse &middot; Cooperative Society</title>
+		<title>TheGreenHouse APS &middot; Cooperative Society</title>
 		<meta charset="utf-8">
 		<meta name="google-site-verification" content="2DtKIh4XFw1dwD6yXCBEADmUVfeOhmxETvRQMLVpcVM">
 		<meta name="description" content="TheGreenHouse is a non-profit association, located in Orria (Salerno), a beautiful country in the south of Italy inside Parco Nazionale del Cilento, an UNESCO heritage.">
