--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
 				<a class="typeform-share button" href="https://singinflower.typeform.com/to/lYHwRO" target="_blank">Join us</a>
 				<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';})()</script>
 
+			<!-- Blog -->
+				<a class="button" href="https://blog.thegreenhouse.online" target="_blank">Blog</a>
+
 			</form>
 
 		<!-- Footer -->
@@ -71,7 +74,6 @@
 					<li>&copy; 2016 - 2017</li>
 					<li>TheGreenHouse APS</li>
 					<li><strong><a href="https://thegreenhouse.online/about">About</a></strong></li>
-					<li><strong><a href="https://blog.thegreenhouse.online" target="_blank">Blog</a></strong></li>
 				</ul>
 
 			<!-- Privay policy -->
