--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 				</ul>
 				<ul class="copyright">
 					<li>&copy; 2016 - 2017</li>
-					<li>TheGreenHouse APS</li>
+					<li><a href="https://cdn.thegreenhouse.online/document/statuto_greenhouse.pdf" target="_blank">TheGreenHouse APS</a></li>
 					<li><strong><a href="https://thegreenhouse.online/about">About</a></strong></li>
 					<li><strong><a href="https://blog.thegreenhouse.online" target="_blank">Blog</a></strong></li>
 				</ul>
