--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
 			<footer id="footer">
 				<ul class="copyright">
 					<li>&copy; 2016 - 2017</li>
-					<li>TheGreenHouse APS</li>
+					<li><a href="https://cdn.thegreenhouse.online/document/statuto_greenhouse.pdf" target="_blank">TheGreenHouse APS</a></li>
 					<li><strong><a href="https://thegreenhouse.online">Home</a></strong></li>
 					<li><strong><a href="https://blog.thegreenhouse.online" target="_blank">Blog</a></strong></li>
 				</ul>
