--- a/index.html
+++ b/index.html
@@ -29,6 +29,26 @@
 		<meta name="msapplication-wide310x150logo" content="https://cdn.thegreenhouse.online/image/tgh_icon/mstile-310x150.png">
 		<meta name="msapplication-square310x310logo" content="https://cdn.thegreenhouse.online/image/tgh_icon/mstile-310x310.png">
 		<link rel="stylesheet" href="assets/css/main.css">
+		<link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css">
+		<script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
+		<script>
+		window.addEventListener("load", function(){
+		window.cookieconsent.initialise({
+  		"palette": {
+    		"popup": {
+    			"background": "#252e39"
+    		},
+    		"button": {
+    			"background": "#4e5c0f"
+    		}
+  		},
+  		"theme": "classic",
+  		"content": {
+    		"message": "This website uses cookies to ensure you get the best experience.",
+    		"dismiss": "Accept"
+  		}
+		})});
+		</script>
 	</head>
 	<body>
 		<!-- Logo -->
@@ -88,8 +108,5 @@
 			<audio autoplay>
 				<source src="https://cdn.thegreenhouse.online/music/down_to_earth_refrain.ogg" type="audio/ogg">
 			</audio>
-
-		<!-- Cookie policy -->
-			<script type="text/javascript" src="//cdn.jsdelivr.net/cookie-bar/1/cookiebar-latest.min.js?theme=altblack&forceLang=en&thirdparty=1&always=1&showNoConsent=1"></script>
 	</body>
 </html>
