--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		window.cookieconsent.initialise({
   		"palette": {
     		"popup": {
-    			"background": "#252e39"
+    			"background": "#000"
     		},
     		"button": {
     			"background": "#4e5c0f"
