--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   		"palette": {
     		"popup": {
     			"background": "#000"
+					"opacity": 0.8;
     		},
     		"button": {
     			"background": "#4e5c0f"
