--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     		}
   		},
   		"theme": "classic",
+			"position": "bottom-right",
   		"content": {
     		"message": "This website uses cookies to ensure you get the best experience.",
     		"dismiss": "Accept"
