--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     			"background": "#000"
     		},
     		"button": {
-    			"background": "#14a7d0"
+    			"background": "#4e5c0f"
     		}
   		},
   		"theme": "classic",
