Update error page

--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     <title>404 error</title>
     <meta charset="utf-8">
 		<meta name="description" content="404 error page">
-    <meta name="keywords" content="">
+    <meta name="keywords" content="404 error">
 		<meta name="author" content="Gius. Camerlingo">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="apple-touch-icon-precomposed" sizes="57x57" href="https://cdn.thegreenhouse.online/image/tgh_icon/apple-touch-icon-57x57.png">
