Update about page

--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
 					<li>&copy; 2016 - 2017</li>
 					<li><a href="https://cdn.thegreenhouse.online/document/statuto_greenhouse.pdf" target="_blank">TheGreenHouse APS</a></li>
 					<li><strong><a href="https://thegreenhouse.online">Home</a></strong></li>
-					<li><strong><a href="https://blog.thegreenhouse.online" target="_blank">Blog</a></strong></li>
+					<li><strong><a href="http://blog.thegreenhouse.online" target="_blank">Blog</a></strong></li>
 				</ul>
 			</footer>
 
