Update about page

--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
 				Most of capital types but money or goods can grow through sharing: the more we give, the more we get. DNA. Hugs. Knowledge. Artistic and human maturity. Culture. Emotions. Friendship. Esteem. Happiness.
 				Our first capital is each and every one who has been, who is and who will be inspired by this concept and started to think about, to imagine... to <strong>share our dream</strong>.
 				</p>
-				<p><strong><a href="https://thegreenhouse.online">TheGreenHouse</a></strong> is a <strong>cooperative society</strong> of ideas and knowledge, an <strong><a href="https://singinflower.com" target="_blank">International Study Center</a></strong>, a place where <strong>sustainable economy</strong> has a real chance, since life quality simply means good food, good atmosphere, good state of mind. Thanks for being here, you’re our first real gain.
+				<p><strong><a href="https://thegreenhouse.online">TheGreenHouse</a></strong> is a <strong>cooperative society</strong> of ideas and knowledge, an <strong><a href="https://info.singinflower.org" target="_blank">International Study Center</a></strong>, a place where <strong>sustainable economy</strong> has a real chance, since life quality simply means good food, good atmosphere, good state of mind. Thanks for being here, you’re our first real gain.
 				</p></h4>
 			</header>
 
