--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 		<link rel="icon" type="image/png" href="https://cdn.thegreenhouse.online/image/tgh_icon/favicon-32x32.png" sizes="32x32">
 		<link rel="icon" type="image/png" href="https://cdn.thegreenhouse.online/image/tgh_icon/favicon-16x16.png" sizes="16x16">
 		<link rel="icon" type="image/png" href="https://cdn.thegreenhouse.online/image/tgh_icon/favicon-128.png" sizes="128x128">
-		<meta name="application-name" content="TheGreenHouse;"/>
+		<meta name="application-name" content="TheGreenHouse">
 		<meta name="msapplication-TileColor" content="#FFFFFF">
 		<meta name="msapplication-TileImage" content="https://cdn.thegreenhouse.online/image/tgh_icon/mstile-144x144.png">
 		<meta name="msapplication-square70x70logo" content="https://cdn.thegreenhouse.online/image/tgh_icon/mstile-70x70.png">
