--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 		<meta name="msapplication-square310x310logo" content="https://cdn.thegreenhouse.online/image/tgh_icon/mstile-310x310.png">
 		<link rel="stylesheet" href="assets/css/main.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/cookieconsent.css">
+		<link rel="stylesheet" href="assets/css/ribbon.css">
 		<script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
 		<script>
 		window.addEventListener("load", function(){
@@ -51,6 +52,8 @@
 		</script>
 	</head>
 	<body>
+		<!-- Ribbon -->
+			<a class="github-fork-ribbon" href="https://thegreenhouse_aps.eventbrite.com" target="_blank" title="Don't miss it!">Don't miss it!</a
 		<!-- Logo -->
 			<logo>
 				<img class="center main" src="images/white_logo.png" alt="Logo" width="130">
