Update root dir

--- a/about.html
+++ b/about.html
@@ -52,9 +52,9 @@
 			<footer id="footer">
 				<ul class="copyright">
 					<li>&copy; 2016 - 2017</li>
-					<li><a href="https://cdn.thegreenhouse.online/document/statuto_aps.pdf" target="_blank">TheGreenHouse APS</a></li>
-					<li><strong><a href="https://thegreenhouse.online">Home</a></strong></li>
-					<li><strong><a href="http://blog.thegreenhouse.online" target="_blank">Blog</a></strong></li>
+					<li><a href="https://cdn.thegreenhouse.online/document/statuto_aps.pdf" target="_blank" title="Statute">TheGreenHouse APS</a></li>
+					<li><strong><a href="https://thegreenhouse.online" title="Home">Home</a></strong></li>
+					<li><strong><a href="http://blog.thegreenhouse.online" target="_blank" title="Blog">Blog</a></strong></li>
 				</ul>
 			</footer>
 
