--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	</head>
 	<body>
 		<!-- Ribbon -->
-			<a class="github-fork-ribbon" href="https://thegreenhouse_aps.eventbrite.com" target="_blank" title="Don't miss it!">Don't miss it!</a
+			<a class="github-fork-ribbon" href="https://thegreenhouse_aps.eventbrite.com" target="_blank" title="Our events">Our events</a
 		<!-- Logo -->
 			<logo>
 				<img class="center main" src="images/white_logo.png" alt="Logo" width="130">
@@ -82,20 +82,20 @@
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
-					<li><a href="https://youtube.com/channel/UC41k15cn3liOXH6ngD7gZNQ" target="_blank" class="icon fa-youtube-play"><span class="label">Youtube</span></a></li>
-					<li><a href="https://instagram.com/thegreenhouse2016" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="https://twitter.com/AssociationTGH" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="https://facebook.com/laserradelleidee" target="_blank" class="icon fa-facebook-square"><span class="label">Facebook</span></a></li>
-					<li><a href="https://linkedin.com/company/thegreenhouse" target="_blank" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
-					<li><a href="https://github.com/gcamerli/greenhouse" target="_blank" class="icon fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="https://thegreenhouse_aps.eventbrite.com" target="_blank" class="icon fa-calendar-o"><span class="label">Eventbrite</span></a></li>
-					<li><a href="mailto:info@thegreenhouse.online" target="_blank" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+					<li><a href="https://youtube.com/channel/UC41k15cn3liOXH6ngD7gZNQ" target="_blank" class="icon fa-youtube-play" title="Youtube"><span class="label">Youtube</span></a></li>
+					<li><a href="https://instagram.com/thegreenhouse2016" target="_blank" class="icon fa-instagram" title="Instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="https://twitter.com/AssociationTGH" target="_blank" class="icon fa-twitter" title="Twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="https://facebook.com/laserradelleidee" target="_blank" class="icon fa-facebook-square" title="Facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="https://linkedin.com/company/thegreenhouse" target="_blank" class="icon fa-linkedin" title="Linkedin"><span class="label">Linkedin</span></a></li>
+					<li><a href="https://github.com/gcamerli/greenhouse" target="_blank" class="icon fa-github" title="Github"><span class="label">GitHub</span></a></li>
+					<li><a href="https://thegreenhouse_aps.eventbrite.com" target="_blank" class="icon fa-calendar-o" title="Events"><span class="label">Eventbrite</span></a></li>
+					<li><a href="mailto:info@thegreenhouse.online" target="_blank" class="icon fa-envelope-o" title="Mail"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; 2016 - 2017</li>
-					<li><a href="https://cdn.thegreenhouse.online/document/statuto_aps.pdf" target="_blank">TheGreenHouse APS</a></li>
-					<li><strong><a href="https://thegreenhouse.online/about">About</a></strong></li>
-					<li><strong><a href="http://blog.thegreenhouse.online" target="_blank">Blog</a></strong></li>
+					<li><a href="https://cdn.thegreenhouse.online/document/statuto_aps.pdf" target="_blank" title="Statute">TheGreenHouse APS</a></li>
+					<li><strong><a href="https://thegreenhouse.online/about" title="About">About</a></strong></li>
+					<li><strong><a href="http://blog.thegreenhouse.online" target="_blank" title="Blog">Blog</a></strong></li>
 				</ul>
 
 			<!-- Privay policy -->
