Update root dir

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>TheGreenHouse APS &middot; About</title>
+		<title>TheGreenHouse &middot; About</title>
 		<meta charset="utf-8">
 		<meta name="description" content="TheGreenHouse is a non-profit association, located in Orria (Salerno), a beautiful country in the south of Italy inside Parco Nazionale del Cilento, an UNESCO heritage.">
 		<link rel="image_src" href="https://cdn.thegreenhouse.online/image/grotta.jpg">
