Update pages | Add script auto updating year

--- a/index.html
+++ b/index.html
@@ -92,7 +92,13 @@
 					<li><a href="mailto:info@thegreenhouse.online" target="_blank" class="icon fa-envelope-o" title="Mail"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; 2016 - 2017</li>
+          <li>&copy; 2016 -
+            <span id="copyright">
+            <script>
+              document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))
+            </script>
+            </span>
+          </li>
 					<li>TheGreenHouse</li>
 					<li><strong><a href="https://thegreenhouse.online/about" title="About">About</a></strong></li>
 					<li><strong><a href="http://blog.thegreenhouse.online" target="_blank" title="Blog">Blog</a></strong></li>
