--- a/about.html
+++ b/about.html
@@ -51,7 +51,13 @@
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="copyright">
-					<li>&copy; 2016 - 2017</li>
+          <li>&copy; 2016 -
+            <span id="copyright">
+            <script>
+              document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))
+            </script>
+            </span>
+          </li>
 					<li>TheGreenHouse</li>
 					<li><strong><a href="https://thegreenhouse.online" title="Home">Home</a></strong></li>
 					<li><strong><a href="http://blog.thegreenhouse.online" target="_blank" title="Blog">Blog</a></strong></li>
